# nesyarena

./: .gitignore  CLAUDE.md  INSTALL_SCALLOP.md  Makefile  NeSyArena_protocol_v1.md  README.md  ROADMAP.md  ltn_integration.patch  pyproject.toml  requirements.txt  resulttable
benchmarks/: instances_v1.json
docs/: ADAPTERS.md  OVERVIEW.md  ROADMAP.md
experiments/: arena.py  conformance_deepproblog.py  conformance_ltn.py  conformance_problog_kbest.py  conformance_scallop.py  e1_overlap.py  e2_depth.py  e3_surrogate.py  e4_witnesses.py  e5_mnist.py  e5b_noise_ablation.py  e6_facttable.py  e6_pixels.py  e7_depth_learning.py  e8_clutrr.py  freeze_instances.py  palette.py  refigure.py  report.py  scorecard.py
experiments/configs/: E1.yaml  E2.yaml  E3.yaml  E5_mnist.yaml  E6_facttable.yaml  E6_pixels.yaml  E8.yaml
legacy/: README.md  gen_golden_from_toy.py
legacy/experiments/: run_ablation.py  run_all.py  run_scale.py
legacy/nesyarena/: adapters_scallop.py  arena.py  oracle.py  provenances.py
legacy/tests/: run_ci.py
paper/: main.tex
scripts/: gate_scallop_diff.py  gate_scallop_ir.py
src/nesyarena/: __init__.py  algebra.py  benchmarks.py  engine.py  generators.py  ir.py  ltn_provenance.py  metrics.py  oracle.py  structures.py  suts.py  witness.py
src/nesyarena/adapters/: __init__.py  base.py  deeplog.py  deepproblog_standalone.py  ltn.py  problog_kbest.py  scallop.py
src/nesyarena/learning/: __init__.py  structures.py
tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_deeplog_adapter.py  test_deepproblog_standalone.py  test_e1_regression.py  test_e2_regression.py  test_e6_findings.py  test_engine.py  test_generators.py  test_ir.py  test_learning_parity.py  test_oracle.py  test_problog_kbest.py  test_suts.py  test_witness_metrics.py
tests/fixtures/: toy_golden.json
